2005-06-01  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/c_locale.h: check gcc on MacOS X. Patch by Zdenek Nemec

	* build/Makefiles/nmake/evc3.mak, evc4.mak, targets.mak:
	support SH3/SH4 platform. Patch by Michael Fink.

	* build/Makefiles/nmake/app/evc3.mak, evc4.mak: ditto.

	* build/Makefiles/nmake/lib/evc3.mak, evc4.mak: ditto.

	* build/lib/configure.bat, src/stlport.rc: ditto.

2005-05-30  Francois Dumont  <dums@stlport...>

	* src/locale_impl.h, locale_impl.cpp, stlport/stl/_locale.h: An other pass
	throught the classic locale initialization. Now all needed static variables
	are in _Locale_impl::make_classic_locale method. Removed useless _Stl_aligned_buffer
	union use in this locale initialization. Removed now useless _Locale_impl::free_classic_locale
	method.
	
2005-05-30  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/_windows.h: worry about Windows CE when check Interlocked
	API for MIPS. Patch by Michael Fink.

	* build/lib/configure.bat: remove the -p option by autodetecting platform.
	Patch by Michael Fink.

	* build/Makefiles/nmake/evc3.mak, evc4.mak: corrects the evc4 makefiles
	to always use the /GF switch [string pooling]. Patch by Michael Fink.

	* doc/README.evc3, doc/README.evc4: reflect changes above.
	Patch by Michael Fink.

	* stlport/errno.h, stlport/time.h: when building for evc, including
	errno.h and time.h often outputs the message in the #pragma statement
	that including this file won't include the native one, since there is no
	native include file. Now the text is only output when not building the library
	and when the file is included directly, not via another STLport header file.
	[Patch by Michael Fink.]

2005-05-29  Francois Dumont  <dums@stlport...>

	* test/unit/locale_test.cpp: Add opendir returned value when listing
	installed locale under linux.

	* build/Makefiles/gmake: Patch from Zdenek Nemec for Mac OS X support.

2005-05-27  Francois Dumont  <dums@stlport...>
